Alterado DBConfig.properties
Alterada a url para localhost.

--- a/src/main/java/giovanna/projeto/livraria1/resources/DBConfig.properties
+++ b/src/main/java/giovanna/projeto/livraria1/resources/DBConfig.properties
@@ -1,4 +1,4 @@
-db_url=jdbc:postgresql://192.168.3.113:5432/Livraria
+db_url=jdbc:postgresql://localhost/Livraria
 db_user=postgres
 db_password=supertux
 
